# rut

./: Cargo.toml  README.md
.github/: build_and_release.yml  dependabot.yml
.github/workflows/: build_and_release.yml  build_and_test.yml
src/: cli.rs  fields_delimiters.rs  main.rs  regex_templates.rs
