[package]
name = "rut"
version = "0.1.0"
authors = ["Andrea Tupini <tupini07@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.3.9"
itertools = "0.9.0"

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = 0
debug-assertions = true
overflow-checks = true
