[package]
name = "rut"
version = "0.1.1"
authors = ["Andrea Tupini <tupini07@gmail.com>"]
description = "The cut clone with regex capabilities"
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tupini07/rut"
repository = "https://github.com/tupini07/rut"
documentation = "https://github.com/tupini07/rut"
categories = ["command-line-utilities"]

[dependencies]
regex = "1.4.2"
itertools = "0.9.0"

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = 0
debug-assertions = true
overflow-checks = true
